--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -6,7 +6,7 @@
   <div class="esquerda">
   <img src="{% static 'notes/img/logo-getit.png' %}" class="logo" />
   <span class="subtitle">Como o Post-it, mas com outro verbo</span></div>
-  <a href="http://127.0.0.1:8000/tags/" class="tag-list-btn"></a>
+  <a href="{% url 'tags' %}" class="tag-list-btn"></a>
 </div>
 
 <main class="container">
